Assert instead of crashing

Using a singleton (at least a QJSValue one) improperly leads to a crash.

Assert with an explanatory comment is a low-cost improvement until
better capitalization checking is implemented.

Task-number: QTBUG-30090
Change-Id: I237a1dd2aab743ae1f09e8d653aa5aeb4bd0240f
Reviewed-by: Lars Knoll <lars.knoll@digia.com>